argocd/raf-sh/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raf-sh
  namespace: raf-sh
  labels:
    app: raf-sh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: raf-sh
  template:
    metadata:
      labels:
        app: raf-sh
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-09-27T18:30:00Z"
    spec:
      containers:
      - name: raf-sh
        image: ghcr.io/yayg/raf.sh:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: raf-sh
  namespace: raf-sh
  labels:
    app: raf-sh
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: raf-sh
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raf-sh
  namespace: raf-sh
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
    - secretName: raf-sh-kamos-tls
      hosts:
        - raf.kamos.freeddns.org
    - secretName: raf-sh-tls
      hosts:
        - raf.sh
    - secretName: raf-sh-www-tls
      hosts:
        - www.raf.sh
  rules:
  - host: raf.kamos.freeddns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: raf-sh
            port:
              number: 80
  - host: raf.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: raf-sh
            port:
              number: 80
  - host: www.raf.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: raf-sh
            port:
              number: 80
